--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 18
 
       - name: "📦️ Install dependencies and build"
-        run: npm install
+        run: npm ci
 
       - name: "Build Storybook"
         run: |
