--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 18
 
       - name: "📦️ Install dependencies"
-        run: npm install
+        run: npm ci
 
       - name: "Build Storybook"
         run: |
