--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -28,6 +28,8 @@
     "@storybook/blocks": "^8.5.2",
     "@storybook/react": "^8.5.2",
     "@storybook/react-vite": "^8.5.2",
-    "storybook": "^8.5.2"
+    "storybook": "^8.5.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.11"
   }
 }
