--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -39,7 +39,7 @@ jobs:
 
       # --- Build Storybook HTML ---
       - name: "Build Storybook HTML"
-        run: wait-on tcp:6007 && npm run build-storybook
+        run: npm run build-storybook
         working-directory: packages/storybook-html/
 
       # --- Visual Regression (targets storybook-html) ---
