--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -46,9 +46,8 @@ jobs:
 
       # --- Visual Regression (targets storybook-html) ---
       - name: "Serve Storybook HTML for VRT"
-        # run: npm run serve-storybook & sleep 10
         run: |
-          npx http-server storybook-static --port 6006 &
+          npm run serve-storybook &
         working-directory: packages/storybook-html/
 
       - name: "Create screenshots (HTML)"
