--- a/packages/storybook-email/package.json
+++ b/packages/storybook-email/package.json
@@ -39,6 +39,7 @@
     "@uqds/core": "^4.0.0-alpha.0",
     "babel-loader": "^9.2.1",
     "core-js": "^3.39.0",
+    "css-loader": "^7.1.2",
     "font-awesome": "^4.7.0",
     "http-server": "^14.1.1",
     "joi-browser": "^13.4.0",
