--- a/.github/workflows/version-dry-run.yml
+++ b/.github/workflows/version-dry-run.yml
@@ -55,17 +55,10 @@ jobs:
           VERSION_OUTPUT=$($COMMAND 2>&1) || LERNA_EXIT_CODE=$?
           
           if [[ $LERNA_EXIT_CODE -eq 1 && "$VERSION_OUTPUT" == *"No changed packages to version"* ]]; then
-            # If no changes are found, use the original friendly message.
             VERSION_OUTPUT="✅ Lerna found no changes to version. This is expected if there are no new 'fix:', 'feat:', or 'BREAKING CHANGE:' commits."
           elif [[ $LERNA_EXIT_CODE -ne 0 ]]; then
-            # If an error occurred, use the raw output for debugging.
-            VERSION_OUTPUT="Lerna failed with an unexpected error. Exit code: $LERNA_EXIT_CODE\n$VERSION_OUTPUT"
-          else         
-            # Use awk to extract the "Changes:" block
-            # This command starts printing when it sees "Changes:", and stops when it sees a blank line or another "lerna" info line.
-            EXTRACTED_CHANGES=$(echo "$VERSION_OUTPUT" | awk '/^Changes:/,/^lerna (info|success|WARN|notice)/ {if (!/^lerna /) print}')
-            # If successful, use the extracted changes.
-            VERSION_OUTPUT="$EXTRACTED_CHANGES"
+            echo "Lerna failed with an unexpected error. Exit code: $LERNA_EXIT_CODE"
+            echo "$VERSION_OUTPUT"
           fi
 
           # Use a heredoc to properly handle multi-line output for the next step
