--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -21,15 +21,17 @@
     "@uqds/react": "^2.0.3"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^8.5.2",
-    "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/addon-interactions": "^8.5.2",
-    "@storybook/addon-links": "^8.5.2",
-    "@storybook/blocks": "^8.5.2",
-    "@storybook/react": "^8.5.2",
-    "@storybook/react-vite": "^8.5.2",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-interactions": "8.6.14",
+    "@storybook/addon-links": "8.6.14",
+    "@storybook/addon-mdx-gfm": "^8.6.14",
+    "@storybook/blocks": "8.6.14",
+    "@storybook/manager-api": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
     "@vitejs/plugin-react": "^4.3.4",
-    "storybook": "^8.5.2",
+    "storybook": "8.6.14",
     "vite": "^6.0.11"
   }
 }
