--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/react",
-  "version": "2.0.4",
+  "version": "2.0.5-alpha.0",
   "description": "React components",
   "keywords": [
     "uqds",
@@ -47,9 +47,9 @@
   },
   "dependencies": {
     "@uqds/body": "^4.0.1",
-    "@uqds/card": "^4.0.2",
+    "@uqds/card": "^4.0.3-alpha.0",
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.2",
+    "@uqds/icon": "^4.0.3-alpha.0",
     "@uqds/layout": "6.0.0-alpha.0",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
