--- a/packages/side-nav/package.json
+++ b/packages/side-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/side-nav",
-  "version": "4.0.2",
+  "version": "4.0.3-alpha.0",
   "description": "Side nav (title, side navigation)",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.2"
+    "@uqds/icon": "^4.0.3-alpha.0"
   }
 }
