--- a/packages/storybook-email/package.json
+++ b/packages/storybook-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-email",
-  "version": "1.1.0",
+  "version": "1.1.1-alpha.0",
   "description": "Storybook for EMAIL instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -27,7 +27,7 @@
     "@storybook/addon-docs": "9.1.16",
     "@storybook/addon-links": "9.1.16",
     "@storybook/html-vite": "9.1.16",
-    "@uqds/accordion": "^7.0.2",
+    "@uqds/accordion": "^7.0.3-alpha.0",
     "babel-loader": "^9.2.1",
     "core-js": "^3.39.0",
     "css-loader": "^7.1.2",
