--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.1.1-alpha.2",
+  "version": "8.1.1-alpha.3",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -30,10 +30,10 @@
     "@uqds/accordion": "^7.0.3-alpha.0",
     "@uqds/acknowledgement": "^0.1.2",
     "@uqds/alert": "^7.0.5-alpha.0",
-    "@uqds/app-maps": "^4.0.1",
+    "@uqds/app-maps": "^4.0.2-alpha.0",
     "@uqds/avatar": "^1.0.1",
     "@uqds/blockquote": "^6.0.0",
-    "@uqds/body": "^4.0.1",
+    "@uqds/body": "^4.0.2-alpha.0",
     "@uqds/breadcrumb": "^8.0.4-alpha.0",
     "@uqds/button": "^4.0.0",
     "@uqds/card": "^4.0.3-alpha.0",
