--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/body",
-  "version": "4.0.2-alpha.1",
+  "version": "4.0.2",
   "description": "Basic styles for HTML elements",
   "keywords": [
     "uqds",
