--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer",
-  "version": "7.0.5-alpha.0",
+  "version": "7.0.5",
   "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
@@ -41,11 +41,11 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/accordion": "^7.0.3-alpha.0",
+    "@uqds/accordion": "^7.0.3",
     "@uqds/acknowledgement": "^0.1.2",
     "@uqds/core": "^5.0.0",
     "@uqds/grid": "^4.0.0",
-    "@uqds/icon": "^4.0.3-alpha.0"
+    "@uqds/icon": "^4.0.3"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
