--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "7.0.5-alpha.0",
+  "version": "7.0.5",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -49,9 +49,9 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/form": "^4.0.3-alpha.0",
+    "@uqds/form": "^4.0.3",
     "@uqds/grid": "^4.0.0",
-    "@uqds/icon": "^4.0.3-alpha.0"
+    "@uqds/icon": "^4.0.3"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
