--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.1.1-alpha.9",
+  "version": "8.1.1",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -27,41 +27,41 @@
     "@storybook/addon-docs": "9.1.16",
     "@storybook/addon-links": "9.1.16",
     "@storybook/html-vite": "9.1.16",
-    "@uqds/accordion": "^7.0.3-alpha.0",
+    "@uqds/accordion": "^7.0.3",
     "@uqds/acknowledgement": "^0.1.2",
-    "@uqds/alert": "^7.0.5-alpha.0",
-    "@uqds/app-maps": "^4.0.2-alpha.1",
+    "@uqds/alert": "^7.0.5",
+    "@uqds/app-maps": "^4.0.2",
     "@uqds/avatar": "^1.0.1",
     "@uqds/blockquote": "^6.0.0",
-    "@uqds/body": "^4.0.2-alpha.1",
-    "@uqds/breadcrumb": "^8.0.4-alpha.0",
+    "@uqds/body": "^4.0.2",
+    "@uqds/breadcrumb": "^8.0.4",
     "@uqds/button": "^4.0.0",
-    "@uqds/card": "^4.0.3-alpha.0",
+    "@uqds/card": "^4.0.3",
     "@uqds/core": "^5.0.0",
-    "@uqds/footer": "^7.0.5-alpha.0",
+    "@uqds/footer": "^7.0.5",
     "@uqds/footer-legacy": "^4.0.0",
-    "@uqds/form": "^4.0.3-alpha.0",
+    "@uqds/form": "^4.0.3",
     "@uqds/grid": "^4.0.0",
-    "@uqds/grid-menu": "^4.0.3-alpha.0",
-    "@uqds/header": "^7.0.5-alpha.0",
-    "@uqds/header-legacy": "^4.0.3-alpha.0",
+    "@uqds/grid-menu": "^4.0.3",
+    "@uqds/header": "^7.0.5",
+    "@uqds/header-legacy": "^4.0.3",
     "@uqds/hero": "^7.0.0",
-    "@uqds/icon": "^4.0.3-alpha.0",
+    "@uqds/icon": "^4.0.3",
     "@uqds/image": "^6.0.0",
     "@uqds/layout": "^7.0.0",
     "@uqds/lists": "^4.0.0",
-    "@uqds/loading-spinner": "^4.0.3-alpha.0",
-    "@uqds/navigation": "^7.0.4-alpha.0",
+    "@uqds/loading-spinner": "^4.0.3",
+    "@uqds/navigation": "^7.0.4",
     "@uqds/page-header": "^4.0.0",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
     "@uqds/pill": "^6.0.0",
-    "@uqds/previous-next": "^4.0.3-alpha.0",
+    "@uqds/previous-next": "^4.0.3",
     "@uqds/profile": "^1.0.1",
     "@uqds/progression": "^4.0.0",
     "@uqds/sections": "^4.0.1",
-    "@uqds/side-nav": "^4.0.3-alpha.0",
-    "@uqds/site-header": "^7.0.4-alpha.0",
+    "@uqds/side-nav": "^4.0.3",
+    "@uqds/site-header": "^7.0.4",
     "@uqds/social": "^6.0.0",
     "@uqds/table": "^4.0.0",
     "@uqds/tabs": "^4.0.0",
