--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.8-alpha.4",
+  "version": "4.0.8",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -29,38 +29,38 @@
     "gulp": "^5.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^7.0.3-alpha.0",
+    "@uqds/accordion": "^7.0.3",
     "@uqds/acknowledgement": "^0.1.2",
-    "@uqds/alert": "^7.0.5-alpha.0",
+    "@uqds/alert": "^7.0.5",
     "@uqds/blockquote": "^6.0.0",
-    "@uqds/body": "^4.0.2-alpha.1",
-    "@uqds/breadcrumb": "^8.0.4-alpha.0",
+    "@uqds/body": "^4.0.2",
+    "@uqds/breadcrumb": "^8.0.4",
     "@uqds/button": "^4.0.0",
-    "@uqds/card": "^4.0.3-alpha.0",
+    "@uqds/card": "^4.0.3",
     "@uqds/core": "^5.0.0",
-    "@uqds/footer": "^7.0.5-alpha.0",
+    "@uqds/footer": "^7.0.5",
     "@uqds/footer-legacy": "^4.0.0",
-    "@uqds/form": "^4.0.3-alpha.0",
+    "@uqds/form": "^4.0.3",
     "@uqds/grid": "^4.0.0",
-    "@uqds/grid-menu": "^4.0.3-alpha.0",
-    "@uqds/header": "^7.0.5-alpha.0",
-    "@uqds/header-legacy": "^4.0.3-alpha.0",
+    "@uqds/grid-menu": "^4.0.3",
+    "@uqds/header": "^7.0.5",
+    "@uqds/header-legacy": "^4.0.3",
     "@uqds/hero": "^7.0.0",
-    "@uqds/icon": "^4.0.3-alpha.0",
+    "@uqds/icon": "^4.0.3",
     "@uqds/image": "^6.0.0",
     "@uqds/layout": "^7.0.0",
     "@uqds/lists": "^4.0.0",
-    "@uqds/loading-spinner": "^4.0.3-alpha.0",
-    "@uqds/navigation": "^7.0.4-alpha.0",
+    "@uqds/loading-spinner": "^4.0.3",
+    "@uqds/navigation": "^7.0.4",
     "@uqds/page-header": "^4.0.0",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
     "@uqds/pill": "^6.0.0",
-    "@uqds/previous-next": "^4.0.3-alpha.0",
+    "@uqds/previous-next": "^4.0.3",
     "@uqds/progression": "^4.0.0",
     "@uqds/sections": "^4.0.1",
-    "@uqds/side-nav": "^4.0.3-alpha.0",
-    "@uqds/site-header": "^7.0.4-alpha.0",
+    "@uqds/side-nav": "^4.0.3",
+    "@uqds/site-header": "^7.0.4",
     "@uqds/social": "^6.0.0",
     "@uqds/table": "^4.0.0",
     "@uqds/tabs": "^4.0.0"
